--- a/src/signature-form/signature-form.component.scss
+++ b/src/signature-form/signature-form.component.scss
@@ -1,3 +1,7 @@
 [hidden] {
 	display: none !important;
 }
+
+.padding-1 {
+	padding: 1rem;
+}
